objects/vlocity_ins__CalculationMatrixRow__c.object
<CustomObject>
    <description>Represents a row within a specific version of a Vlocity Calculation Matrix.</description>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixVersionId__c</fullName>
        <label>Vlocity Calculation Matrix Version</label>
        <referenceTo>vlocity_ins__CalculationMatrixVersion__c</referenceTo>
        <relationshipName>Vlocity_Calculation_Table_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HashKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hash Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputDataLong__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OutputDataLong</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OutputData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Calculation Matrix Row</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data MD5 Hash</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Row</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>